--- a/css/main.css
+++ b/css/main.css
@@ -526,7 +526,7 @@ img {
   height: 120px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   gap: none;
   margin-bottom: 30px;
   background: var(--secondary-background-color-next);
