--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -1,7 +1,12 @@
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+  @include tablet {
+    width: 738px;
+  }
+  @include desktop {
+    width: 1170px;
+  }
 }
