--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -1,4 +1,10 @@
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  // width: 100%;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  // justify-items: center;
+  @include desktop {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
