--- a/scss/layouts/_clients.scss
+++ b/scss/layouts/_clients.scss
@@ -1,9 +1,21 @@
 .clients {
-  display: flex;
-  gap: 30px;
+  @include flex($ai: center, $jc: center, $gp: 30px);
+  // display: flex;
+  // gap: 30px;
+  &__item {
+    @include mobile {
+      @include calc(2, 30px);
+    }
+    @include tablet {
+      @include calc(3, 30px);
+    }
+    @include desktop {
+      @include calc(6, 30px);
+    }
+  }
   &__link {
     display: inline-block;
-    width: 170px;
+    // width: 170px;
     height: 92px;
     border: 1px solid var(--icon-soc-color);
     border-radius: 4px;
