--- a/scss/layouts/_doing.scss
+++ b/scss/layouts/_doing.scss
@@ -1,4 +1,8 @@
 .doing {
+  display: none;
+  @include desktop {
+    display: block;
+  }
   padding-top: 0px;
   &__list {
     @include flex($ai: flex-start, $gp: none);
