--- a/scss/layouts/_features.scss
+++ b/scss/layouts/_features.scss
@@ -1,20 +1,31 @@
 .features {
   &__list {
-    @include flex(flex-start, $gp: none);
+    @include flex($ai: flex-start, $jc: center, $gp: 30px);
     // display: flex;
     // align-items: flex-start;
     // justify-content: space-between;
   }
   &__item {
-    width: 270px;
+    width: 100%;
+    @include mobile {
+      @include calc(2, 30px);
+    }
+    @include tablet {
+      margin-bottom: 30px;
+    }
+    @include desktop {
+      @include calc(4, 30px);
+    }
   }
   &__container {
-    width: 270px;
+    // width: 270px;
+    // width: 100vw;
     height: 120px;
-    @include flex($jc: center, $gp: none);
+    @include flex($jc: center, $gp: 0);
     // display: flex;
     // justify-content: center;
     // align-items: center;
+    // margin-bottom: 30px;
     margin-bottom: 30px;
     background: var(--secondary-background-color-next);
     border-radius: 4px;
@@ -23,8 +34,15 @@
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    text-align: center;
 
     margin-bottom: 10px;
+    @include mobile {
+      text-align: left;
+    }
+    @include tablet {
+      text-align: left;
+    }
   }
   &__text {
     line-height: 1.71;
