index without header

--- a/scss/components/_address.scss
+++ b/scss/components/_address.scss
@@ -2,6 +2,7 @@
   font-style: inherit;
   display: inline-block;
   min-width: 231px;
+  text-align: center;
   &__item:not(:last-child) {
     margin-bottom: 9px;
   }
