--- a/css/main.css
+++ b/css/main.css
@@ -76,14 +76,14 @@ img {
   padding-right: 15px;
   margin: 0 auto;
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
   .container {
-    width: 738px;
+    width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 1200px;
   }
 }
 
@@ -290,6 +290,7 @@ img {
   font-style: inherit;
   display: inline-block;
   min-width: 231px;
+  text-align: center;
 }
 .address__item:not(:last-child) {
   margin-bottom: 9px;
@@ -519,12 +520,12 @@ img {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Mobile/hero@2x.jpg);
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Tablet/hero.jpg);
   }
 }
-@media screen and (min-width: 769px) and (min-device-pixel-ratio: 2), screen and (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 192dpi), screen and (min-width: 769px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Tablet/hero@2x.jpg);
   }
@@ -542,7 +543,7 @@ img {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Desktop/hero@2x.jpg);
   }
 }
-@media screen and (min-width: 1200px) and (min-width: 1601px) {
+@media screen and (min-width: 1200px) and (min-width: 1600px) {
   .hero {
     width: 1600px;
   }
@@ -590,7 +591,7 @@ img {
     width: calc((100% - 30px) / 2);
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
   .features__item {
     margin-bottom: 30px;
   }
@@ -623,7 +624,7 @@ img {
     text-align: left;
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
   .features__title {
     text-align: left;
   }
@@ -688,7 +689,7 @@ img {
     width: calc((100% - 30px) / 2);
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
   .team__item {
     margin-bottom: 30px;
   }
@@ -723,12 +724,15 @@ img {
   gap: 30px;
   flex-wrap: wrap;
 }
+.clients__item {
+  width: calc((100% - 30px) / 2);
+}
 @media screen and (min-width: 481px) {
   .clients__item {
-    width: calc((100% - 30px) / 2);
+    width: calc((100% - 60px) / 3);
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
   .clients__item {
     width: calc((100% - 60px) / 3);
   }
@@ -821,15 +825,38 @@ img {
   padding-bottom: 60px;
   background-color: var(--secondary-background-color-opposit);
 }
-.footer__container {
-  display: flex;
-  align-items: baseline;
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__combiner {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__combiner {
+    margin-bottom: 0;
+  }
 }
 .footer__address {
-  margin-right: 70px;
+  margin-left: auto;
+  margin-right: auto;
   width: 231px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer__address {
+    margin-right: 70px;
+  }
 }
 .footer__appeal {
   font-weight: 700;
@@ -837,14 +864,34 @@ img {
   text-transform: uppercase;
   color: var(--primary-text-color-opposit);
   margin-bottom: 20px;
+  margin-top: 60px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer__appeal {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__appeal {
+    text-align: start;
+  }
 }
 .footer__cos {
-  margin-right: 93px;
+  margin-right: auto;
+  margin-left: auto;
 }
-.footer__label {
-  display: flex;
-  flex-direction: row;
-  gap: 12px;
+@media screen and (min-width: 1200px) {
+  .footer__cos {
+    margin-right: 93px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__label {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+  }
 }
 .footer__input {
   display: block;
@@ -852,14 +899,14 @@ img {
   padding-top: 0;
   padding-right: 0;
   padding-bottom: 0;
-  padding-left: 16px;
+  padding-left: 0;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: var(--primary-text-color-opposit);
   background-color: var(--secondary-background-color-opposit);
-  min-width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -868,11 +915,34 @@ img {
 .footer__input:focus-visible {
   outline-color: var(--color-accent);
 }
+@media screen and (min-width: 481px) {
+  .footer__input {
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__input {
+    padding-left: 16px;
+    width: 358px;
+  }
+}
 .footer__button {
   display: flex;
   gap: 10px;
   min-width: 200px;
   padding: 10px 28px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 1200px) {
+  .footer__button {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 .footer__icon {
   fill: var(--primary-background-color-main);
