--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -3,15 +3,34 @@
   padding-bottom: 60px;
   background-color: var(--secondary-background-color-opposit);
   &__container {
-    display: flex;
-    align-items: baseline;
+    @include desktop {
+      display: flex;
+      flex-direction: row;
+      align-items: baseline;
+    }
+  }
+  &__combiner {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-direction: row;
+      align-items: baseline;
+      margin-bottom: 60px;
+    }
+    @include desktop {
+      margin-bottom: 0;
+    }
   }
   &__address {
-    margin-right: 70px;
+    margin-left: auto;
+    margin-right: auto;
 
     width: 231px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    @include desktop {
+      margin-right: 70px;
+    }
   }
   &__appeal {
     font-weight: 700;
@@ -21,14 +40,28 @@
     color: var(--primary-text-color-opposit);
 
     margin-bottom: 20px;
+    margin-top: 60px;
+    text-align: center;
+    @include tablet {
+      margin-top: 0;
+    }
+    @include desktop {
+      text-align: start;
+    }
   }
   &__cos {
-    margin-right: 93px;
+    margin-right: auto;
+    margin-left: auto;
+    @include desktop {
+      margin-right: 93px;
+    }
   }
   &__label {
-    display: flex;
-    flex-direction: row;
-    gap: 12px;
+    @include desktop {
+      display: flex;
+      flex-direction: row;
+      gap: 12px;
+    }
   }
   &__input {
     display: block;
@@ -36,7 +69,7 @@
     padding-top: 0;
     padding-right: 0;
     padding-bottom: 0;
-    padding-left: 16px;
+    padding-left: 0;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.25;
@@ -45,7 +78,7 @@
     color: var(--primary-text-color-opposit);
     background-color: var(--secondary-background-color-opposit);
 
-    min-width: 358px;
+    width: 100%;
     height: 50px;
 
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -54,12 +87,29 @@
     &:focus-visible {
       outline-color: var(--color-accent);
     }
+    @include mobile {
+      width: 450px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    @include desktop {
+      padding-left: 16px;
+      width: 358px;
+    }
   }
   &__button {
     display: flex;
     gap: 10px;
     min-width: 200px;
     padding: 10px 28px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    @include desktop {
+      margin-top: 0;
+      margin-left: 0;
+      margin-right: 0;
+    }
   }
   &__icon {
     fill: var(--primary-background-color-main);
