--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,12 +1,25 @@
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  // font-size: 26px;
+  // line-height: 1.19;
+
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+
   color: var(--primary-text-color-opposit);
 
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  @include tablet {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+  @include desktop {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
   &__accent {
     color: var(--color-accent);
   }
