--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -3,6 +3,7 @@
   &__container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 }
 
@@ -12,7 +13,27 @@
   position: absolute;
   left: 0;
   bottom: -1px;
+
   width: 100%;
   height: 4px;
   background-color: var(--color-accent);
+}
+
+.menu__open {
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+
+  border-width: 0;
+
+  text-align: center;
+
+  background-color: var(--primary-background-color-main);
+
+  display: block;
+  align-items: center;
+  @include tablet {
+    display: none;
+  }
 }
