--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,12 @@ img {
   padding-top: 16px;
   padding-bottom: 16px;
 }
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
 @media screen and (min-width: 768px) {
   .logo {
     padding-top: 26px;
@@ -361,8 +367,8 @@ img {
 
 .modal {
   position: absolute;
-  width: 528px;
-  min-height: 581px;
+  width: 100%;
+  min-height: 609px;
   background: var(--primary-background-color-main);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -372,6 +378,17 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scaleX(1);
   transition: transform 300ms linear;
+}
+@media screen and (min-width: 481px) {
+  .modal {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 .modal__close {
   font-family: inherit;
@@ -408,10 +425,15 @@ img {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color-main);
+}
+@media screen and (min-width: 1200px) {
+  .modal__appeal {
+    line-height: 1.15;
+  }
 }
 .modal__list {
   display: flex;
@@ -487,11 +509,17 @@ img {
   margin-bottom: 30px;
   text-align: center;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.1666666667;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color-main);
   transition: var(--transition-hover-focus-fill);
+}
+@media screen and (min-width: 1200px) {
+  .check__text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .check__imput:checked + .check__text span {
   border: none;
