--- a/scss/components/_check.scss
+++ b/scss/components/_check.scss
@@ -9,8 +9,13 @@
     text-align: center;
 
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+
+    font-size: 12px;
+    line-height: calc(14 / 12);
+    @include desktop {
+      font-size: 14px;
+      line-height: 1.71;
+    }
 
     letter-spacing: 0.03em;
 
