--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,12 +1,14 @@
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  // font-size: 26px;
-  // line-height: 1.19;
 
   font-size: 24px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  @include desktop {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 
   color: var(--primary-text-color-opposit);
 
