--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -1,7 +1,15 @@
 .modal {
   position: absolute;
-  width: 528px;
-  min-height: 581px;
+
+  width: 100%;
+  min-height: 609px;
+  @include mobile {
+    width: 450px;
+  }
+  @include desktop {
+    width: 528px;
+    min-height: 581px;
+  }
 
   background: var(--primary-background-color-main);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -56,11 +64,14 @@
 
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
 
     color: var(--primary-text-color-main);
+    @include desktop {
+      line-height: 1.15;
+    }
   }
   &__list {
     display: flex;
