--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,7 @@
 @import "./components/address";
 @import "./components/backdrop";
 @import "./components/modal";
+@import "./components/menu";
 @import "./components/check";
 @import "./layouts/header";
 @import "./layouts/hero";
