--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -2,6 +2,7 @@
   position: absolute;
 
   width: 100%;
+  max-width: 450px;
   height: 609px;
   scroll-snap-align: center;
   @include mobile {
@@ -9,6 +10,7 @@
   }
   @include desktop {
     width: 528px;
+    max-width: 528px;
     height: 581px;
   }
 
