--- a/scss/components/_title.scss
+++ b/scss/components/_title.scss
@@ -1,9 +1,15 @@
 .title {
-  font-size: 36px;
-  line-height: 1.17;
-
+  font-size: 28px;
+  line-height: calc(33 / 28);
   text-align: center;
+  @include desktop {
+    font-size: 36px;
+    line-height: 1.17;
+  }
   &--margin {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    @include desktop {
+      margin-bottom: 50px;
+    }
   }
 }
