--- a/scss/layouts/_clients.scss
+++ b/scss/layouts/_clients.scss
@@ -3,10 +3,7 @@
   // display: flex;
   // gap: 30px;
   &__item {
-    @include calc(2, 30px);
-    @include mobile {
-      @include calc(3, 30px);
-    }
+    width: calc((450px - 30px) / 2);
     @include tablet {
       @include calc(3, 30px);
     }
