--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -77,7 +77,7 @@
     padding-top: 0;
     padding-right: 0;
     padding-bottom: 0;
-    padding-left: 0;
+    padding-left: 16px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.25;
