--- a/scss/layouts/_team.scss
+++ b/scss/layouts/_team.scss
@@ -13,6 +13,9 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     @include mobile {
+      width: 450px;
+    }
+    @include tablet {
       @include calc(2, 30px);
     }
     @include desktop {
