--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -113,6 +113,10 @@
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
+    &:hover,
+    &:focus {
+      box-shadow: 0px 4px 4px var(--shadow-color);
+    }
     @include desktop {
       margin-top: 0;
       margin-left: 0;
