--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -63,7 +63,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  box-shadow: 0px 4px 4px var(--shadow-color);
   &__title {
     font-weight: 900;
     font-size: 26px;
@@ -90,5 +89,9 @@
     padding: 10px 32px;
     margin-left: auto;
     margin-right: auto;
+    &:hover,
+    &:focus {
+      box-shadow: 0px 4px 4px var(--shadow-color);
+    }
   }
 }
